Adds customer quotes docs page

--- a/docs/src/scss/Global.module.scss
+++ b/docs/src/scss/Global.module.scss
@@ -157,3 +157,19 @@
     z-index: 200;
   }
 }
+
+//* Testimonials
+
+:global {
+  .testimonial{
+    
+    .testimonial-quote {
+      text-align: justify;
+    }
+
+    .testimonial-image {
+      text-align: center;
+    }
+
+  }
+}
